# webhooks

./: ci.sh  pyproject.toml  pytest.ini
tests/: test_webhooks.py
webhooks/: manage.py
webhooks/core/: models.py  serializers.py  tasks.py  urls.py  views.py
webhooks/core/migrations/: 0001_initial.py  0002_auto_20190811_1926.py  0003_webhookjob_result_id.py
webhooks/main/: celery.py  settings.py  urls.py
